 - Fix bug in writing meshes embedded higher dimensions to M-files
 - Zero vector in uBLASVector::resize() to fix spurious bug in Krylov solver
 - Handle named fields (u.rename()) in VTK output
 - Bug fix in computation of FacetArea for tetrahedrons
 - Add support for direct plotting of Dirichlet boundary conditions: plot(bc)
 - Updates for PETSc 3.1
 - Add relaxation parameter to NewtonSolver
 - Implement collapse of renumbered dof maps (serial and parallel)
 - Simplification of DofMapBuilder for parallel dof maps
 - Improve and simplify DofMap
 - Add Armadillo dependency for dense linear algebra
 - Remove LAPACKFoo wrappers
 - Add abstract base class GenericDofMap
 - Zero small values in VTK output to avoid VTK crashes
 - Handle MeshFunction/markers in homogenize bc
 - Make preconditioner selectable in VariationalProblem (new parameter)
 - Read/write meshes in binary format
 - Add parameter "use_ident" in DirichletBC
 - Issue error by default when solvers don't converge (parameter "error_on_convergence")
 - Add option to print matrix/vector for a VariationalProblem
 - Trilinos backend now works in parallel
 - Remove Mesh refine members functions. Use free refine(...) functions instead
 - Remove AdapativeObjects
 - Add Stokes demo using the MINI element
 - Interface change: operator+ now used to denote enriched function spaces
 - Interface change: operator+ --> operator* for mixed elements
 - Add option 'allow_extrapolation' useful when interpolating to refined meshes
 - Add SpatialCoordinates demo
 - Add functionality for accessing time series sample times: vector_times(), mesh_times()
 - Add functionality for snapping mesh to curved boundaries during refinement
 - Add functionality for smoothing the boundary of a mesh
 - Speedup assembly over exterior facets by not using BoundaryMesh
 - Mesh refinement improvements, remove unecessary copying in Python interface
 - Clean PETSc and Epetra Krylov solvers