@@ -1,4 +1,4 @@
-// Copyright (C) 2003-2008 Anders Logg.
+// Copyright (C) 2003-2010 Anders Logg.
 // Licensed under the GNU LGPL Version 2.1.
 //
 // Thanks to Jim Tilander for many helpful hints.
@@ -7,7 +7,7 @@
 // Modified by Ola Skavhaug, 2009.
 //
 // First added:  2003-03-14
-// Last changed: 2010-05-03
+// Last changed: 2010-06-28
 
 #include <dolfin/common/constants.h>
 #include <dolfin/common/timing.h>
@@ -19,8 +19,9 @@ using namespace dolfin;
 
 //-----------------------------------------------------------------------------
 Progress::Progress(std::string title, unsigned int n)
-  : title(title), n(n), i(0), p_step(0.1), t_step(1.0), p(0), t(0),
-    always(false), finished(false), displayed(false)
+  : title(title), n(n), i(0), p_step(0.1), t_step(0.5), c_step(1),
+    p(0), t(0), tc(0),
+    always(false), finished(false), displayed(false), counter(0)
 {
   if (n <= 0)
     error("Number of steps for progress session must be positive.");
@@ -34,8 +35,8 @@ Progress::Progress(std::string title, unsigned int n)
 }
 //-----------------------------------------------------------------------------
 Progress::Progress(std::string title)
-  : title(title), n(0), i(0), p_step(0.1), t_step(1.0), p(0), t(0),
-    always(false), finished(false), displayed(false)
+  : title(title), n(0), i(0), p_step(0.1), t_step(0.5), p(0), t(0),
+    always(false), finished(false), displayed(false), counter(0)
 {
   // LogManager::logger.progress(title, 0.0);
   t = time();
@@ -47,7 +48,9 @@ Progress::Progress(std::string title)
 //-----------------------------------------------------------------------------
 Progress::~Progress()
 {
-  // Do nothing
+  // Display last progress bar if not displayed
+  if (displayed && !finished)
+    LogManager::logger.progress(title, 1.0);
 }
 //-----------------------------------------------------------------------------
 void Progress::operator=(double p)
@@ -71,22 +74,41 @@ void Progress::operator++(int)
 //-----------------------------------------------------------------------------
 void Progress::update(double p)
 {
+  // FIXME: We should be able to simplify this...
+
+  // Check that enough number of updates have passed so we don't call
+  // time() to often which is costly
+  if (counter++ < c_step)
+    return;
+  counter = 0;
+
+  // Check if we have already finished
   if (finished)
     return;
 
-  //p = std::max(std::min(p, 1.0), 0.0);
-  //const bool p_check = p - this->p >= p_step - DOLFIN_EPS;
-
+  // Check that enough time has passed since last update
   const double t = time();
   const bool t_check = (t - this->t >= t_step - DOLFIN_EPS);
-  if (t_check) {
-    // reset time for next update
+
+  // Adjust counter step
+  const bool fraction = 0.1;
+  if (t - this->tc < fraction * t_step)
+    c_step *= 2;
+  else if (t - this->tc > t_step && c_step >= 2)
+    c_step /= 2;
+  this->tc = t;
+
+  // Reset time for next update
+  if (t_check)
+  {
     this->p = p;
     this->t = t;
   }
 
+  // Assume we want to update the progress
   bool do_log_update = t_check;
 
+  // Nontrivial check for first update
   if (t_check && !always && !displayed && p >= 0.7)
   {
     // skip the first update, since it will probably reach 100%
@@ -97,6 +119,7 @@ void Progress::update(double p)
     displayed = true;
   }
 
+  // Nontrivial check for last update
   if (p >= 1.0)
   {
     // always display 100% message if a message has already been shown
